crypto/BRCryptoAmount.h

    typedef enum {
        CRYPTO_COMPARE_LT,
        CRYPTO_COMPARE_EQ,
        CRYPTO_COMPARE_GT
    } BRCryptoComparison;
    typedef struct BRCryptoAmountRecord *BRCryptoAmount;
    extern BRCryptoAmount
    cryptoAmountCreateDouble (double value,
                              BRCryptoUnit unit);
    extern BRCryptoAmount
    cryptoAmountCreateInteger (int64_t value,
                               BRCryptoUnit unit);
    extern BRCryptoAmount
    cryptoAmountCreateString (const char *value,
                              BRCryptoBoolean isNegative,
                              BRCryptoUnit unit);
    /**
     * Returns the amount's currency
     *
     * @param amount The amount
     *
     * @return The currency w/ an incremented reference count (aka 'taken')
     */
    extern BRCryptoCurrency
    cryptoAmountGetCurrency (BRCryptoAmount amount);
    
    extern BRCryptoBoolean
    cryptoAmountIsNegative (BRCryptoAmount amount);
    extern BRCryptoBoolean
    cryptoAmountIsCompatible (BRCryptoAmount a1,
                              BRCryptoAmount a2);
    extern BRCryptoComparison
    cryptoAmountCompare (BRCryptoAmount a1,
                         BRCryptoAmount a2);
    extern BRCryptoAmount
    cryptoAmountAdd (BRCryptoAmount a1,
                     BRCryptoAmount a2);
    extern BRCryptoAmount
    cryptoAmountSub (BRCryptoAmount a1,
                     BRCryptoAmount a2);
    extern BRCryptoAmount
    cryptoAmountNegate (BRCryptoAmount amount);
    
    extern double
    cryptoAmountGetDouble (BRCryptoAmount amount,
                           BRCryptoUnit unit,
                           BRCryptoBoolean *overflow);
    extern uint64_t
    cryptoAmountGetIntegerRaw (BRCryptoAmount amount,
                               BRCryptoBoolean *overflow);
    // Private-ish
    extern UInt256
    cryptoAmountGetValue (BRCryptoAmount amount);