include/BRCryptoUnit.h

typedef struct BRCryptoUnitRecord *BRCryptoUnit;