Java/Crypto/src/main/java/com/breadwallet/crypto/jni/CryptoLibrary.java


    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountCreateDouble(double, BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:7</i>
     */
    BRCryptoAmount cryptoAmountCreateDouble(double value, BRCryptoUnit unit);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountCreateInteger(int64_t, BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:9</i>
     */
    BRCryptoAmount cryptoAmountCreateInteger(long value, BRCryptoUnit unit);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountCreateString(const char*, BRCryptoBoolean, BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:11</i>
     */
    BRCryptoAmount cryptoAmountCreateString(String value, int isNegative, BRCryptoUnit unit);
    /**
     * Original signature : <code>BRCryptoCurrency cryptoAmountGetCurrency(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:13</i>
     */
    BRCryptoCurrency cryptoAmountGetCurrency(BRCryptoAmount amount);
    /**
     * Original signature : <code>BRCryptoBoolean cryptoAmountIsNegative(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:15</i>
     */
    int cryptoAmountIsNegative(BRCryptoAmount amount);
    /**
     * Original signature : <code>BRCryptoBoolean cryptoAmountIsCompatible(BRCryptoAmount, BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:17</i>
     */
    int cryptoAmountIsCompatible(BRCryptoAmount a1, BRCryptoAmount a2);
    /**
     * Original signature : <code>BRCryptoComparison cryptoAmountCompare(BRCryptoAmount, BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:19</i>
     */
    int cryptoAmountCompare(BRCryptoAmount a1, BRCryptoAmount a2);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountAdd(BRCryptoAmount, BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:21</i>
     */
    BRCryptoAmount cryptoAmountAdd(BRCryptoAmount a1, BRCryptoAmount a2);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountSub(BRCryptoAmount, BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:23</i>
     */
    BRCryptoAmount cryptoAmountSub(BRCryptoAmount a1, BRCryptoAmount a2);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountNegate(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:25</i>
     */
    BRCryptoAmount cryptoAmountNegate(BRCryptoAmount amount);
    /**
     * Original signature : <code>double cryptoAmountGetDouble(BRCryptoAmount, BRCryptoUnit, BRCryptoBoolean*)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:27</i>
     */
    double cryptoAmountGetDouble(BRCryptoAmount amount, BRCryptoUnit unit, IntByReference overflow);
    /**
     * Original signature : <code>uint64_t cryptoAmountGetIntegerRaw(BRCryptoAmount, BRCryptoBoolean*)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:29</i>
     */
    long cryptoAmountGetIntegerRaw(BRCryptoAmount amount, IntByReference overflow);
    /**
     * Original signature : <code>UInt256 cryptoAmountGetValue(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:31</i>
     */
    UInt256.ByValue cryptoAmountGetValue(BRCryptoAmount amount);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountTake(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:33</i>
     */
    BRCryptoAmount cryptoAmountTake(BRCryptoAmount obj);
    /**
     * Original signature : <code>void cryptoAmountGive(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:35</i>
     */
    void cryptoAmountGive(BRCryptoAmount obj);


    /**
     * Original signature : <code>char* cryptoAddressAsString(BRCryptoAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoAddress.h:2</i>
     */
    Pointer cryptoAddressAsString(BRCryptoAddress address);
    /**
     * Original signature : <code>BRCryptoBoolean cryptoAddressIsIdentical(BRCryptoAddress, BRCryptoAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoAddress.h:4</i>
     */
    int cryptoAddressIsIdentical(BRCryptoAddress a1, BRCryptoAddress a2);
    /**
     * Original signature : <code>BRCryptoAddress cryptoAddressTake(BRCryptoAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoAddress.h:6</i>
     */
    BRCryptoAddress cryptoAddressTake(BRCryptoAddress obj);
    /**
     * Original signature : <code>void cryptoAddressGive(BRCryptoAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoAddress.h:8</i>
     */
    void cryptoAddressGive(BRCryptoAddress obj);


    /**
     * Original signature : <code>BRMasterPubKey cryptoAccountAsBTC(BRCryptoAccount)</code><br>
     * <i>native declaration : crypto/BRCryptoPrivate.h:23</i>
     */
    BRMasterPubKey.ByValue cryptoAccountAsBTC(BRCryptoAccount account);


    /**
     * Original signature : <code>BRCryptoAddress cryptoAddressCreateAsBTC(BRAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoPrivate.h:8</i>
     */
    BRCryptoAddress cryptoAddressCreateAsBTC(BRAddress.ByValue btc);
    /**
     * Original signature : <code>BRCryptoAddress cryptoAddressCreateAsEth(BREthereumAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoPrivate.h:8</i>
     */
    BRCryptoAddress cryptoAddressCreateAsETH(BREthereumAddress.ByValue address);

    /**
     * Original signature : <code>int BRAddressIsValid(const char*)</code><br>
     * <i>native declaration : support/BRAddress.h</i>
     */
    int BRAddressIsValid(String addr);

    /**
     * Original signature : <code>BREthereumAddress addressCreate(const char*)</code><br>
     * <i>native declaration : ethereum/base/BREthereumAddress.h</i>
     */
    BREthereumAddress.ByValue addressCreate(String address);

    /**
     * Original signature : <code>int addressValidateString(const char*)</code><br>
     * <i>native declaration : ethereum/base/BREthereumAddress.h</i>
     */
    int addressValidateString(String addr);


    /**
     * returns the first unused external address (legacy pay-to-pubkey-hash)<br>
     * Original signature : <code>BRAddress BRWalletLegacyAddress(BRWallet*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:37</i>
     */
    BRAddress.ByValue BRWalletLegacyAddress(BRWallet wallet);
    /**
     * true if the address was previously generated by BRWalletUnusedAddrs() (even if it's now used)<br>
     * Original signature : <code>int BRWalletContainsAddress(BRWallet*, const char*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:47</i>
     */
    int BRWalletContainsAddress(BRWallet wallet, String addr);
    /**
     * current wallet balance, not including transactions known to be invalid<br>
     * Original signature : <code>uint64_t BRWalletBalance(BRWallet*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:67</i>
     */
    long BRWalletBalance(BRWallet wallet);
    /**
     * fee-per-kb of transaction size to use when creating a transaction<br>
     * Original signature : <code>uint64_t BRWalletFeePerKb(BRWallet*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:87</i>
     */
    long BRWalletFeePerKb(BRWallet wallet);
    /**
     * Original signature : <code>void BRWalletSetFeePerKb(BRWallet*, uint64_t)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:89</i>
     */
    void BRWalletSetFeePerKb(BRWallet wallet, long feePerKb);
    /**
     * returns the amount received by the wallet from the transaction (total outputs to change and/or receive addresses)<br>
     * Original signature : <code>uint64_t BRWalletAmountReceivedFromTx(BRWallet*, const BRTransaction*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:154</i>
     */
    long BRWalletAmountReceivedFromTx(BRWallet wallet, BRTransaction tx);
    /**
     * returns the amount sent from the wallet by the trasaction (total wallet outputs consumed, change and fee included)<br>
     * Original signature : <code>uint64_t BRWalletAmountSentByTx(BRWallet*, const BRTransaction*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:159</i>
     */
    long BRWalletAmountSentByTx(BRWallet wallet, BRTransaction tx);
    /**
     * fee that will be added for a transaction of the given amount<br>
     * Original signature : <code>uint64_t BRWalletFeeForTx(BRWallet*, const BRTransaction *)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:179</i>
     */
    long BRWalletFeeForTx(BRWallet wallet, BRTransaction tx);
    /**
     * fee that will be added for a transaction of the given amount<br>
     * Original signature : <code>uint64_t BRWalletFeeForTxAmount(BRWallet*, uint64_t)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:179</i>
     */
    long BRWalletFeeForTxAmount(BRWallet wallet, long amount);
    /**
     * frees memory allocated for wallet, and calls BRTransactionFree() for all registered transactions<br>
     * Original signature : <code>void BRWalletFree(BRWallet*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:194</i>
     */
    void BRWalletFree(BRWallet wallet);


    /**
     * Original signature : <code>UInt256 createUInt256 (uint64_t)</code><br>
     * <i>native declaration : ethereum/util/BRUtilMath.h</i>
     */
    UInt256.ByValue createUInt256(long value);
    /**
     * Original signature : <code>char * coerceStringPrefaced (UInt256, int base, const char *)</code><br>
     * <i>native declaration : ethereum/util/BRUtilMath.h</i>
     */
    Pointer coerceStringPrefaced(UInt256.ByValue value, int base, String preface);

